# github-auth-playground

./: compose.yml
backend/: pyproject.toml
backend/backend/: main.py
